# Interview-assistant

./: .gitignore  README.md  pom.xml
deploy/: README.md
deploy/env/: server.env.production.example  web.env.production.example
deploy/nginx/: interview-assistant.conf
deploy/scripts/: deploy-server.sh  deploy-web.sh  init-server.sh  install-configs.sh
deploy/systemd/: interview-assistant-server.service
native/macos/: README.md
native/macos/system-audio-capture/: Package.swift  build.sh  system-audio-capture
native/macos/system-audio-capture/Sources/SystemAudioCapture/: main.swift
native/windows/: README.md
native/windows/wasapi-loopback-capture/: CMakeLists.txt  build.ps1
native/windows/wasapi-loopback-capture/src/: main.cpp
packaging/macos/: Info.plist  make-icon.sh  nod.icns
scripts/: PACKAGING.md  package-desktop.ps1  package-desktop.sh
server/: .env.example  pom.xml
src/main/java/com/interviewassistant/: Main.java
src/main/resources/: application.properties
web/: .env.example  .env.local  index.html  package-lock.json  package.json  vite.config.js
web/public/downloads/: README.txt
web/src/: App.vue  api.js  main.js  styles.css
web/src/router/: index.js
web/src/stores/: session.js
web/src/views/: AdminOperationsView.vue  BillingView.vue  ConsoleView.vue  ContactView.vue  DashboardView.vue  DownloadView.vue  HomeView.vue  InterviewSessionDetailView.vue  InterviewSessionsView.vue  LoginView.vue  OrdersView.vue  PrivacyView.vue  ReadinessView.vue  RefundView.vue  TermsView.vue  TransactionsView.vue  UsageView.vue
(+79 files in other folders)
